# ASPFuzz

./: .envrc  .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
amd_sp/: .lldbinit  Cargo.toml  Makefile.toml
amd_sp/bins/: .gitignore  README.md
amd_sp/src/: client.rs  fuzzer.bla  fuzzer.rs  harness.rs  main.rs  performance.rs  setup.rs
amd_sp/yaml/: mailbox.yaml  mailbox_small.yaml  mailbox_zen2_experimental.yaml  ryzen_zen+_desktop_parse_asp_flash.yaml  ryzen_zen1_desktop_parse_asp_flash.yaml  ryzen_zen2_desktop_offchip_mailbox.yaml  ryzen_zen2_desktop_parse_asp_flash.yaml  ryzen_zen3_desktop_parse_asp_flash.yaml  ryzen_zentesla_parse_asp_flash.yaml  secos.yaml  secos_backup.yaml  secos_example_data_abort.yaml  secos_experimental.yaml  tryout.yaml  tryout_crashy.yaml
fuzzer/: Cargo.toml
fuzzer/amd_sp/: Cargo.toml  Makefile.toml
fuzzer/amd_sp/bins/: .gitignore
fuzzer/amd_sp/src/: client.rs  fuzzer.rs  harness.rs  main.rs  setup.rs
fuzzer/libasp/: Cargo.toml
fuzzer/libasp/src/: exception_handler.rs  gen_metadata.rs  initial_inputs.rs  reset_state.rs  tunneling.rs
hooks/: pre-commit
libasp/: Cargo.toml
libasp/src/: asp.rs  bindings.rs  emulator_module.rs  exception_handler.rs  gen_metadata.rs  initial_inputs.rs  lib.rs  memory.rs  reset_state.rs  tunneling.rs  yaml_conf.rs
libasp/src/config/: access_observer.rs  crash.rs  input.rs  mod.rs  tunnel.rs  write_catcher.rs
script/: known_overflow_detector.py  metadata_analyser.py  metadata_classifier.py  parse_mbox.py  plot_scaling.py  run_until_first_crash.sh  run_until_number_of_crashes.sh  solutions2flashimg.py  solutions_classifier.py  stats2plot.py  test_scaling.sh  understand_shifts.py
