[workspace]
members = [
    "amd_sp",
    "libasp"
]
resolver = "2"

[workspace.dependencies]
libafl = { git = "ssh://git@git.tu-berlin.de/pspreverse/libafl.git", branch ="main",default-features = false, features = [
    "prelude",
    "fork"
] }
libafl_bolts = {  git = "ssh://git@git.tu-berlin.de/pspreverse/libafl.git", branch ="main", features = ["errors_backtrace", "stable_anymap"]}
libafl_qemu = {  git = "ssh://git@git.tu-berlin.de/pspreverse/libafl.git", branch ="main", features = [
    "arm",
    "systemmode",
], default-features = false }

libafl_targets = {  git = "ssh://git@git.tu-berlin.de/pspreverse/libafl.git", branch ="main" }

[profile.dev]
debug = true
debug-assertions = true

[profile.release]
debug = true
debug-assertions = true