[workspace]
members = [
    "amd_sp",
    "libasp"
]
resolver = "2"

[workspace.dependencies]
libafl = { path = "../LibAFL/libafl/", default-features = false, features = [
    "prelude",
    "fork"
] }
libafl_bolts = { path = "../LibAFL/libafl_bolts/"}
libafl_qemu = { path = "../LibAFL/libafl_qemu/", features = [
    "arm",
    "systemmode",
], default-features = false }

[profile.dev]
debug = true
debug-assertions = true
[profile.release]
debug = true
debug-assertions = true