[package]
name = "libasp"
version = "0.1.0"
authors = ["Patrick Gersch"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
capstone = {version = "0.12.0", features = ["full"]}
libafl = { workspace=true }
libafl_bolts = { workspace=true }
libafl_qemu = { workspace=true }
serde = { version = "1.0.210", default-features = false, features = [
    "alloc","derive"
] } # serialization lib
serde_yaml = "*"
yaml-rust = "0.4.5"
log = "0.4.22"
strum = { version = "0.26", features = ["derive"] }