[package]
name = "aspfuzz"
version = "0.8.0"
authors = ["Patrick Gersch"]
edition = "2018"

[features]
default = ["std"]
std = []

# Fuzzer performance measurement feature
performance = []

# Fuzzer features
debug = []
multicore = []

[dependencies]
libafl = { workspace = true}
libafl_qemu = { workspace = true }
libafl_bolts = { workspace = true}

libasp = { path = "../libasp" }

serde = { version = "1.0", default-features = false, features = ["alloc"] } # serialization lib
log = "0.4"
env_logger = "0.11.3"
nix = {version ="0.28", features = ["fs"]}
chrono = "0.4"
rangemap = "1.5.0"
clap = { version = "4.0", features = ["derive"] }
